objects/BMCServiceDesk__Task__c.object
<CustomObject>
    <fields>
        <fullName>DOED_Owner_Name_User__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name - User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMR_Detail__c</fullName>
        <label>IMR Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMR__c</fullName>
        <label>IMR#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Resolution_NULL__c</fullName>
        <label>Is Resolution NULL</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__taskDescription__c</columns>
        <columns>BMCServiceDesk__FKClient__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>BMCServiceDesk__dueDateTime__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>BMCServiceDesk__Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCServiceDesk__Assessor</fullName>
        <active>true</active>
        <label>Assessor</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMCServiceDesk__Tasks</fullName>
        <active>true</active>
        <label>Tasks</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(BMCServiceDesk__state__c ), NOT( PRIORVALUE(BMCServiceDesk__state__c)),NOT(ISCHANGED( BMCServiceDesk__Total_Duration__c ) )  ,NOT( ISNEW( )) )</errorConditionFormula>
        <errorMessage>This task is closed. Reopen the task to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Select_Either_User_Lead_or_Contact</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
      (
            (BMCServiceDesk__FKClient__c != NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
            (BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c != NULL &amp;&amp; BMCServiceDesk__FKContact__c == NULL) ||
            (BMCServiceDesk__FKClient__c == NULL  &amp;&amp;  BMCServiceDesk__FKLead__c == NULL &amp;&amp; BMCServiceDesk__FKContact__c != NULL) 
      ) ||
      AND(ISNEW(), OR(BMCServiceDesk__FKIncident__c != NULL,
	  BMCServiceDesk__FKProblem__c != NULL,
	  BMCServiceDesk__FKRelease__c != NULL))
      , 
      false, true)</errorConditionFormula>
        <errorMessage>To save the task, select a value in any one of the following fields: Client ID, Contact or Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__TaskLinkingValidation</fullName>
        <active>true</active>
        <description>Verifies that a task is linked to only one object (Incident, Change Request, or Problem or Release) at a time.</description>
        <errorConditionFormula>OR(
						AND (  NOT( ISBLANK ( BMCServiceDesk__FKChange__c ) ) , NOT( ISBLANK ( BMCServiceDesk__FKIncident__c )) ),
						AND ( NOT( ISBLANK (  BMCServiceDesk__FKProblem__c  ) ) , NOT( ISBLANK ( BMCServiceDesk__FKChange__c ) ) ),
						AND ( NOT( ISBLANK ( BMCServiceDesk__FKIncident__c ) ) , NOT( ISBLANK ( BMCServiceDesk__FKProblem__c ) ) ),
						AND ( NOT( ISBLANK (  BMCServiceDesk__FKRelease__c  ) ) , NOT( ISBLANK ( BMCServiceDesk__FKChange__c ) ) ),
						AND ( NOT( ISBLANK (  BMCServiceDesk__FKProblem__c  ) ) , NOT( ISBLANK ( BMCServiceDesk__FKRelease__c ) ) ),
						AND ( NOT( ISBLANK (  BMCServiceDesk__FKIncident__c  ) ) , NOT( ISBLANK ( BMCServiceDesk__FKRelease__c ) ) ))</errorConditionFormula>
        <errorMessage>A task can be linked to only one object (Incident or Change Request or Problem or Release) at a time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__dueDateMustBeAfterOpenedDate</fullName>
        <active>true</active>
        <description>The Due Date must be later than the Opened Date</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__dueDateTime__c),ISBLANK(BMCServiceDesk__dueDateTime__c) ) ), BMCServiceDesk__dueDateTime__c &lt; BMCServiceDesk__openDateTime__c  )</errorConditionFormula>
        <errorMessage>The Due Date must be later than the Opened Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOED_Validate_Resolution_On_CLOSED</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(  BMCServiceDesk__taskResolution__c  ),  OR(BMCServiceDesk__Status_ID__c = &quot;CLOSED&quot;,BMCServiceDesk__Status_ID__c = &quot;TASK RESOLVED&quot;)  )</errorConditionFormula>
        <errorMessage>Please populate Resolution field when a task is Closed / Resolved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoEd_IMRDetail</fullName>
        <active>true</active>
        <description>This validation rule ensures that the IMR Detail field is populated if the IMR# has been populated.</description>
        <errorConditionFormula>AND( ISBLANK( IMR_Detail__c ), NOT( ISBLANK( IMR__c ) ) )</errorConditionFormula>
        <errorMessage>The IMR Detail field must be populated if the IMR# has been entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoEd_IMRNumber</fullName>
        <active>true</active>
        <description>This validation rule ensures that the IMR Number field is populated if the IMR Detail has been populated.</description>
        <errorConditionFormula>AND( ISBLANK( IMR__c ), NOT( ISBLANK( IMR_Detail__c ) ) )</errorConditionFormula>
        <errorMessage>The IMR# field must be populated if the IMR Detail has been entered.</errorMessage>
    </validationRules>
</CustomObject>